# time-tests

./: Cargo.toml  Dockerfile  README.md  fly.toml  result.txt
benches/: baseline.rs  benchmark.rs  my_bench.rs
examples/: odt_first_attempt.rs  odt_second_attempt.rs  odt_third_attempt.rs  pdt_first_attempt.rs  pdt_second_attempt.rs  pdt_third_attempt.rs  time_first_attempt.rs  time_second_attempt.rs  time_third_attempt.rs
src/: lib.rs
